--- a/bookclub/src/app/edit-book-details/edit-book-details.component.html
+++ b/bookclub/src/app/edit-book-details/edit-book-details.component.html
@@ -1,7 +1,7 @@
 <div class="container">
 <div class="col-md-6 offset-md-3">
     <h3>Edit Book Details</h3>
-    <form (ngSubmit)="onSubmit()">
+    <form #submitForm = "ngForm" (ngSubmit)="onSubmit(); submitForm.reset()">
       <div class="form-group">
         <label> Title</label>
         <input
@@ -26,13 +26,13 @@
   
       <div class="form-group">
         <label> Summary </label>
-        <input
+        <textarea
           type="text"
           class="form-control"
           id="summary"
           [(ngModel)]="book.summary"
           name="summary"
-        />
+        ></textarea>>
       </div>
 
       <div class="form-group">
