--- a/bookclub/src/app/update-quote/update-quote.component.html
+++ b/bookclub/src/app/update-quote/update-quote.component.html
@@ -11,6 +11,12 @@
         </div>
 
         <div class="form-group">
+            <label> Name </label>
+            <input type="text" class ="form-control" id = "name"
+                [(ngModel)] = "quotes.name" name = "name" placeholder="Name">
+        </div>
+
+        <div class="form-group">
             <label> Chapter </label>
             <input type="text" class ="form-control" id = "ch"
                 [(ngModel)] = "quotes.chapter" name = "ch" placeholder="Chapter">
